# dont-count-the-sheep

./: .gitattributes  .gitignore  Cargo.toml  README.md
apartment/: Cargo.toml  README.md
apartment/src/: actor.rs  assets.rs  bedroom.rs  cameras.rs  characters.rs  consts.rs  controllable.rs  layout.rs  lib.rs  prelude.rs  zindex.rs
apartment/src/actor/: npc.rs  player.rs
common/loading_screen/: Cargo.toml
common/loading_screen/src/: atlases.rs  lib.rs
common/story/: Cargo.toml  README.md  visualize_dialog.py
common/story/derive/: Cargo.toml
common/story/derive/src/: lib.rs
common/story/macros/: Cargo.toml
common/story/macros/src/: embed_dialogs.rs  lib.rs
common/story/src/: deser.rs  dialog.rs  emoji.rs  lib.rs  portrait_dialog.rs
common/story/src/dialog/: deser.rs  fe.rs  guard.rs  list.rs  loader.rs
common/story/src/portrait_dialog/: aaatargets.rs  apartment_elevator.rs  example.rs  example_lorem.txt  marie.rs
common/story/tests/: basic.toml
common/top_down/: Cargo.toml  README.md
common/top_down/src/: actor.rs  cameras.rs  environmental_objects.rs  inspect_ability.rs  inspect_and_interact.rs  layout.rs  lib.rs
common/top_down/src/actor/: npc.rs  player.rs
common/top_down/src/environmental_objects/: door.rs
common/top_down/src/interactable/: door.rs
common/top_down/src/layout/: build_pathfinding_graph.rs  map_maker.rs  pathfinding.rs  systems.rs
downtown/: Cargo.toml
downtown/src/: actor.rs  cameras.rs  layout.rs  lib.rs
main_game/: .gitignore  Cargo.toml  build.rs  clinic.png.import  project.godot  zabradli.png.import
main_game/assets/apartment/: map.ron
main_game/assets/audio/: calm_ocean_loop.oga  doorFFX.oga  dramaticFFX.oga  elevator2FFX.oga  elevatorFFX.oga  failFFX.oga  ghostFFX.oga  melody_cheerful.oga  melody_melancholic_guitar.oga  melody_melancholic_piano.oga  mysteriousFFX.oga  sad_echo.oga  tvFFX.oga  walk_crunchyFFX.oga  walk_snowFFX.oga  xylophoneFFX.oga
main_game/assets/dialogs/: bolt_is_mean.toml  bolt_tells_you_about_marie.toml  enter_the_apartment_elevator.toml  initial_cooper.toml  initial_otter.toml  initial_phoebe.toml  initial_samizdat.toml  marie_blabbering.toml  mr_good_water.toml  quest_cooper_bring_tennis_balls.toml
main_game/assets/maps/: apartment.ron  building1_basement1.ron  building1_basement2.ron  building1_player_floor.ron  clinic.ron  clinic_ward.ron  compound.ron  compound_tower.ron  downtown.ron  mall.ron  plant_shop.ron  sewers.ron  twinpeaks_apartment.ron
main_game/assets/scenes/: alchemy.tscn  apartment.ron  apartment.tscn  barn.tscn  basement1.tscn  book_leather.tscn  building1_basement1.tscn  building1_basement2.tscn  building1_player_floor.tscn  clinic.tscn  clinic1.tscn  clinic_bottom.tscn  clinic_ward.tscn  compound.tscn  compound_tower.tscn  downtown.tscn  first_floor.tscn  mall.tscn  meditation_lvl_1.tscn  meditation_room2.tscn  meditation_room_1.tscn  meditation_room_entry.tscn  plant_shop.tscn  selfcheckout.tscn  sewers.tscn  tower.tscn  twinpeaks_apartment.tscn
main_game/assets/shaders/: gi_post_processing.wgsl  gi_ss_blend.wgsl  gi_ss_probe.wgsl
main_game/src/: main.rs  main_dev_playground.rs  new_game.rs
main_game_lib/: Cargo.toml
main_game_lib/src/: action.rs  assets.rs  bevy_rscn.rs  cutscene.rs  dialog.rs  hud.rs  lib.rs  loading_screen.rs  player_stats.rs  prelude.rs  rscn.rs  scene_maker.rs  state.rs  store.rs  top_down.rs  vec2_ext.rs
main_game_lib/src/bevy_rscn/: loader.rs  spawner.rs  token.rs  tree.rs
main_game_lib/src/cutscene/: enter_an_elevator.rs  enter_dark_door.rs
main_game_lib/src/dialog/: deser.rs  fe.rs  guard.rs  list.rs  loader.rs
main_game_lib/src/dialog/fe/: portrait.rs
main_game_lib/src/dialog/guard/: dialog_for_npc.rs  exhaustive_alternatives.rs  notify.rs  reach_last_alternative.rs  visit_once.rs
main_game_lib/src/hud/: daybar.rs  notification.rs
main_game_lib/src/rscn/: intermediate_repr.rs  lex.rs  loader.rs  parse.rs  spawner.rs  token.rs  tree.rs  value.rs
main_game_lib/src/rscn/parse/: ext_resource.rs  node.rs  sub_resource.rs
main_game_lib/src/scene_maker/: store_and_load.rs  toolbar.rs
main_game_lib/src/top_down/: action.rs  actor.rs  cameras.rs  environmental_objects.rs  inspect_and_interact.rs  layout.rs  scene_configs.rs  spawner.rs
main_game_lib/tests/: basic.rs  basic.tscn
meditation/: Cargo.toml  README.md
meditation/src/: assets.rs  background.rs  camera.rs  cameras.rs  climate.rs  consts.rs  control_mode.rs  distractions.rs  generic.rs  gravity.rs  hoshi.rs  lib.rs  light.rs  main.rs  menu.rs  path.rs  polpos.rs  prelude.rs  ui.rs  weather.rs  zindex.rs
meditation/src/distractions/: black_hole.rs  consts.rs  effects.rs  path.rs  react.rs  spawner.rs  videos.rs  webp.rs
meditation/src/hoshi/: README.md  anim.rs  arrow.rs  consts.rs  controls.rs  mode.rs  sprite.rs
meditation/src/polpos/: consts.rs  effects.rs  react.rs  spawner.rs  videos.rs
meditation/src/ui/: fps.rs  menu.rs  score.rs
meditation/src/weather/: anim.rs  arrow.rs  consts.rs  controls.rs  mode.rs  sprite.rs
scenes/apartment/: Cargo.toml  README.md
scenes/apartment/src/: actor.rs  cameras.rs  consts.rs  layout.rs  lib.rs  prelude.rs  zindex.rs
scenes/dev_playground/: Cargo.toml  README.md
scenes/dev_playground/assets/: map.ron
scenes/dev_playground/src/: actor.rs  autogen.rs  cameras.rs  layout.rs  lib.rs
scenes/downtown/: Cargo.toml  README.md
scenes/downtown/src/: actor.rs  cameras.rs  layout.rs  lib.rs  prelude.rs  zindex.rs
scenes/meditation/: Cargo.toml  README.md
scenes/meditation/src/: background.rs  cameras.rs  climate.rs  consts.rs  gravity.rs  hoshi.rs  lib.rs  path.rs  polpos.rs  prelude.rs  room.rs  ui.rs  zindex.rs
scenes/sewers/: Cargo.toml  README.md
scenes/sewers/src/: layout.rs  lib.rs  prelude.rs
scenes/top_down/: Cargo.toml  README.md
scenes/top_down/src/: building1_basement1.rs  building1_basement2.rs  building1_player_floor.rs  clinic.rs  clinic_ward.rs  compound.rs  compound_tower.rs  downtown.rs  layout.rs  lib.rs  mall.rs  plant_shop.rs  prelude.rs  sewers.rs  twinpeaks_apartment.rs
(+269 files in other folders)
