[workspace]

package.edition = "2021"
package.version = "0.1.0"
resolver = "2"
members = [
    "bevy_grid_squared",
    "bevy_magic_light_2d",
    "common/action",
    "common/assets",
    "common/loading_screen",
    "common/physics",
    "common/store",
    "common/story",
    "common/visuals",
    "main_game_lib",
    "main_game",
    "scenes/building1_basement1",
    "scenes/building1_basement2",
    "scenes/building1_player_floor",
    "scenes/clinic",
    "scenes/downtown",
    "scenes/mall",
    "scenes/meditation",
    "scenes/plant_shop",
    "scenes/sewers",
    "scenes/twinpeaks_apartment",
]


[workspace.dependencies.bevy]
version = "=0.13.2"
default-features = false
features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_pbr",           # required by light crate
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "hdr",
    "multi-threaded",
    "png",
    "tonemapping_luts",
    "webgl2",
    "x11",
]

[workspace.dependencies]
bevy_pixel_camera = "0.13"
bevy_webp_anim = "0.3"
bevy-inspector-egui = { version = "0.24", default-features = false }
leafwing-input-manager = "0.13"
bevy_egui = "0.27"

scene_building1_basement1 = { path = "scenes/building1_basement1" }
scene_building1_basement2 = { path = "scenes/building1_basement2" }
scene_building1_player_floor = { path = "scenes/building1_player_floor" }
scene_clinic = { path = "scenes/clinic" }
scene_clinic_ward = { path = "scenes/clinic_ward" }
scene_downtown = { path = "scenes/downtown" }
scene_mall = { path = "scenes/mall" }
scene_meditation = { path = "scenes/meditation" }
scene_plant_shop = { path = "scenes/plant_shop" }
scene_sewers = { path = "scenes/sewers" }
scene_twinpeaks_apartment = { path = "scenes/twinpeaks_apartment" }

bevy_grid_squared = { path = "bevy_grid_squared", features = ["serde"] }
bevy_magic_light_2d = { path = "bevy_magic_light_2d" }
common_action = { path = "common/action" }
common_assets = { path = "common/assets" }
common_ext = { path = "common/ext" }
common_loading_screen = { path = "common/loading_screen" }
common_physics = { path = "common/physics" }
common_store = { path = "common/store" }
common_story = { path = "common/story" }
common_visuals = { path = "common/visuals" }
main_game_lib = { path = "main_game_lib" }

graphviz-rust = "0.9"
itertools = "0.13"
lazy_static = "1.4"
logos = "0.14"
pathfinding = "4.8"
rand = "0.8"
ron = "0.8"
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }
rusqlite_migration = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.7"
smallvec = "1.13"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0"
toml = "0.8"


[profile.release]
codegen-units = 1
debug = false
lto = "thin"
opt-level = 3
panic = "abort"

[profile.dev.package."*"]
opt-level = 3
debug = true
incremental = true

[profile.dev]
codegen-units = 16
opt-level = 1
debug = true
incremental = true
