[workspace]

package.edition = "2021"
package.version = "0.1.0"
resolver = "2"
members = [
    "bevy_grid_squared",
    "common/action",
    "common/assets",
    "common/loading_screen",
    "common/physics",
    "common/store",
    "common/story",
    "common/visuals",
    "main_game_lib",
    "main_game",
    "rscn",
    "scenes/meditation",
    "scenes/top_down",
]


[workspace.dependencies.bevy]
version = "=0.14.1"
default-features = false
features = [
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_render",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "hdr",
    "multi_threaded",
    "png",
    "tonemapping_luts",
    "webgl2",
    "x11",
]

[workspace.dependencies.bevy-inspector-egui]
version = "=0.25.2"
default-features = false
features = ["bevy_render", "egui_clipboard", "egui_open_url"]

[workspace.dependencies]
bevy_egui = "0.28"                                                                                        # waiting for bevy-inspector-egui to update
bevy_kira_audio = "0.20"
# TODO: This is no longer maintained. We should vendor it.
bevy_pixel_camera = { git = "https://github.com/porkbrain/bevy_pixel_camera.git", branch = "bevy-v0.14" }
bevy_webp_anim = "0.4"
# TODO: To update, we need to implement a complete overhaul of their API.
# <https://github.com/Leafwing-Studios/leafwing-input-manager/blob/main/RELEASES.md#version-0150>
leafwing-input-manager = "0.14"                                                                           # API has been completely rewamped

scene_top_down = { path = "scenes/top_down" }
scene_meditation = { path = "scenes/meditation" }

bevy_grid_squared = { path = "bevy_grid_squared", features = ["serde"] }
common_action = { path = "common/action" }
common_assets = { path = "common/assets" }
common_ext = { path = "common/ext" }
common_loading_screen = { path = "common/loading_screen" }
common_physics = { path = "common/physics" }
common_store = { path = "common/store" }
common_story = { path = "common/story" }
common_visuals = { path = "common/visuals" }
main_game_lib = { path = "main_game_lib" }
rscn = { path = "rscn" }

graphviz-rust = "0.9"
itertools = "0.13"
lazy_static = "1.4"
logos = "0.14"
miette = { version = "7.2", features = ["fancy"] }
pathfinding = "4.11"
rand = "0.8"
ron = "0.8"
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }
rusqlite_migration = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.9"
smallvec = "1.13"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0"
toml = "0.8"
untools = "1.0"

[profile.release]
codegen-units = 1
debug = false
lto = "thin"
opt-level = 3
panic = "abort"

[profile.dev.package."*"]
opt-level = 3
debug = true
incremental = true

[profile.dev]
codegen-units = 16
opt-level = 1
debug = true
incremental = true
