[package]
name = "downtown"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
bevy_grid_squared.workspace = true
bevy_pixel_camera.workspace = true
bevy.workspace = true
common_actor.workspace = true
common_assets.workspace = true
common_layout.workspace = true
common_loading_screen.workspace = true
common_store.workspace = true
common_story.workspace = true
common_visuals.workspace = true
lazy_static.workspace = true
main_game_lib.workspace = true

[features]
dev = ["bevy/glam_assert", "common_layout/dev"]
