[package]
name = "main_game"
edition.workspace = true
version.workspace = true
default-run = "game"


[[bin]]
name = "game"
path = "src/main.rs"


[features]
devtools = [
    "main_game_lib/devtools",
    "scene_building1_basement1/devtools",
    "scene_building1_player_floor/devtools",
    "scene_downtown/devtools",
    "scene_meditation/devtools",
]


[dependencies]
bevy.workspace = true
common_loading_screen.workspace = true
common_store.workspace = true
common_story.workspace = true
main_game_lib.workspace = true
scene_building1_basement1.workspace = true
scene_building1_player_floor.workspace = true
scene_downtown.workspace = true
scene_mall.workspace = true
scene_meditation.workspace = true
