[package]
name = "main_game"
edition.workspace = true
version.workspace = true
default-run = "game"


[[bin]]
name = "game"
path = "src/main.rs"


[features]
devtools = [
    "main_game_lib/devtools",
    "scene_building1_basement1/devtools",
    "scene_building1_basement2/devtools",
    "scene_building1_player_floor/devtools",
    "scene_clinic_ward/devtools",
    "scene_clinic/devtools",
    "scene_compound_tower/devtools",
    "scene_compound/devtools",
    "scene_downtown/devtools",
    "scene_mall/devtools",
    "scene_meditation/devtools",
    "scene_plant_shop/devtools",
    "scene_sewers/devtools",
    "scene_twinpeaks_apartment/devtools",
]


[dependencies]
bevy.workspace = true
common_loading_screen.workspace = true
common_store.workspace = true
common_story.workspace = true
main_game_lib.workspace = true
scene_building1_basement1.workspace = true
scene_building1_basement2.workspace = true
scene_building1_player_floor.workspace = true
scene_clinic_ward.workspace = true
scene_clinic.workspace = true
scene_compound_tower.workspace = true
scene_compound.workspace = true
scene_downtown.workspace = true
scene_mall.workspace = true
scene_meditation.workspace = true
scene_plant_shop.workspace = true
scene_sewers.workspace = true
scene_twinpeaks_apartment.workspace = true
