[package]
name = "main_game"
edition.workspace = true
version.workspace = true
default-run = "game"


[[bin]]
name = "game"
path = "src/main.rs"


[features]
devtools = [
    "main_game_lib/devtools",
    "scene_top_down/devtools",
    "scene_meditation/devtools",
]


[dependencies]
bevy.workspace = true
common_loading_screen.workspace = true
common_store.workspace = true
common_story.workspace = true
main_game_lib.workspace = true
scene_top_down.workspace = true
scene_meditation.workspace = true
