[package]
name = "main_game_lib"
edition.workspace = true
version.workspace = true


[dependencies]
bevy_grid_squared.workspace = true
bevy_magic_light_2d.workspace = true
bevy_pixel_camera.workspace = true
bevy_webp_anim.workspace = true
bevy-inspector-egui.workspace = true
bevy.workspace = true
common_action.workspace = true
common_assets.workspace = true
common_ext.workspace = true
common_loading_screen.workspace = true
common_store.workspace = true
common_story.workspace = true
common_top_down.workspace = true
common_visuals.workspace = true
strum.workspace = true


[features]
# used by scene_dev_playground to import some extra state from this crate
dev-playground = []
