[package]
name = "main_game_lib"
edition.workspace = true
version.workspace = true


[features]
devtools = [
    "bevy_egui",
    "bevy-inspector-egui",
    "bevy/glam_assert",
    "common_loading_screen/devtools",
    "common_story/devtools",
    "common_visuals/devtools",
    "graphviz-rust",
    "leafwing-input-manager/egui",
]


[dependencies]
bevy_egui = { workspace = true, optional = true }
bevy_grid_squared.workspace = true
bevy_kira_audio.workspace = true
bevy_pixel_camera.workspace = true
bevy_webp_anim.workspace = true
bevy-inspector-egui = { workspace = true, optional = true }
bevy.workspace = true
common_action.workspace = true
common_assets.workspace = true
common_ext.workspace = true
common_loading_screen.workspace = true
common_store.workspace = true
common_story.workspace = true
common_visuals.workspace = true
graphviz-rust = { workspace = true, optional = true }
itertools.workspace = true
lazy_static.workspace = true
leafwing-input-manager.workspace = true
logos.workspace = true
miette.workspace = true
pathfinding.workspace = true
rand.workspace = true
ron.workspace = true
rscn.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with.workspace = true
smallvec.workspace = true
strum.workspace = true
thiserror.workspace = true
toml.workspace = true
untools.workspace = true


[dev-dependencies]
rand.workspace = true
