[package]
name = "meditation"
version.workspace = true
edition.workspace = true

[dependencies]
bevy_magic_light_2d.workspace = true
bevy_pixel_camera.workspace = true
bevy-webp-anim = { path = "../bevy-webp-anim" }
bevy.workspace = true
common-physics = { path = "../common/physics" }
common-visuals = { path = "../common/visuals" }
itertools.workspace = true
lazy_static.workspace = true
rand.workspace = true

[features]
dev-poisson = ["common-physics/poissons-eq-visualization"]
dev = []
