[package]
name = "meditation"
version.workspace = true
edition.workspace = true

[dependencies]
bevy_magic_light_2d.workspace = true
bevy_pixel_camera.workspace = true
bevy_webp_anim = { path = "../bevy-webp-anim" }
bevy.workspace = true
common-physics = { path = "../common/physics" }
common-visuals = { path = "../common/visuals" }
itertools.workspace = true
lazy_static.workspace = true
rand.workspace = true

[features]
dev = ["bevy/glam_assert"]
dev-poisson = ["common-physics/poissons-eq-visualization"]
