[package]
name = "meditation"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"


[dependencies]
bevy_magic_light_2d.workspace = true
bevy_pixel_camera.workspace = true
bevy.workspace = true
bevy_webp_anim.workspace = true
common-physics.workspace = true
common-visuals.workspace = true
main_game_lib.workspace = true
itertools.workspace = true
lazy_static.workspace = true
rand.workspace = true

[features]
dev = ["bevy/glam_assert"]
dev-poisson = ["common-physics/poissons-eq-visualization"]
