[package]
name = "common_story"
version.workspace = true
edition.workspace = true


[features]
devtools = ["bevy-inspector-egui"]


[dependencies]
bevy-inspector-egui = { workspace = true, optional = true }
bevy.workspace = true
common_action.workspace = true
common_assets.workspace = true
common_store.workspace = true
common_visuals.workspace = true
itertools.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with.workspace = true
strum.workspace = true
thiserror.workspace = true
toml.workspace = true
