[package]
name = "common_story"
version.workspace = true
edition.workspace = true


[features]
devtools = ["bevy-inspector-egui"]


[dependencies]
bevy_grid_squared.workspace = true
bevy-inspector-egui = { workspace = true, optional = true }
bevy.workspace = true
common_assets.workspace = true
common_visuals.workspace = true
serde = { workspace = true, features = ["derive"] }
strum.workspace = true
