[package]
name = "common_top_down"
version.workspace = true
edition.workspace = true

[dependencies]
bevy_grid_squared.workspace = true
bevy_pixel_camera.workspace = true
bevy-inspector-egui.workspace = true
bevy.workspace = true
common_action.workspace = true
common_assets.workspace = true
common_ext.workspace = true
common_story.workspace = true
itertools.workspace = true
leafwing-input-manager.workspace = true
pathfinding.workspace = true
ron = { workspace = true, optional = true }
serde.workspace = true
smallvec.workspace = true

[features]
dev = ["ron"]
