[package]
name = "common_top_down"
version.workspace = true
edition.workspace = true


[dependencies]
bevy_egui = { workspace = true, optional = true }
bevy_grid_squared.workspace = true
bevy_pixel_camera.workspace = true
bevy-inspector-egui = { workspace = true, optional = true }
bevy.workspace = true
common_action.workspace = true
common_assets.workspace = true
common_ext.workspace = true
common_store.workspace = true
common_story.workspace = true
common_visuals.workspace = true
graphviz-rust = { workspace = true, optional = true }
itertools.workspace = true
lazy_static.workspace = true
leafwing-input-manager.workspace = true
pathfinding.workspace = true
rand.workspace = true
ron = { workspace = true, optional = true }
serde.workspace = true
smallvec.workspace = true
strum.workspace = true


[dev-dependencies]
rand.workspace = true
ron.workspace = true


[features]
devtools = ["ron", "graphviz-rust", "bevy_egui", "bevy-inspector-egui"]
