[package]
name = "scene_apartment"
version.workspace = true
edition.workspace = true


[dependencies]
bevy_grid_squared.workspace = true
bevy_pixel_camera.workspace = true
bevy.workspace = true
common_top_down.workspace = true
common_visuals.workspace = true
itertools.workspace = true
lazy_static.workspace = true
main_game_lib.workspace = true
rand.workspace = true
serde.workspace = true
smallvec.workspace = true
strum.workspace = true


[features]
dev = ["bevy/glam_assert"]
