[package]
name = "scene_dev_playground"
version.workspace = true
edition.workspace = true


[dependencies]
bevy = { workspace = true, features = ["glam_assert"] }
bevy_grid_squared.workspace = true
bevy_pixel_camera.workspace = true
common_top_down = { workspace = true, features = ["dev"] }
itertools.workspace = true
lazy_static.workspace = true
main_game_lib = { workspace = true, features = ["dev-playground"] }
rand.workspace = true
serde.workspace = true
smallvec.workspace = true
strum.workspace = true
