[package]
name = "scene_downtown"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
bevy_grid_squared.workspace = true
bevy_pixel_camera.workspace = true
bevy.workspace = true
lazy_static.workspace = true
main_game_lib.workspace = true

[features]
dev = ["bevy/glam_assert"]
