[package]
name = "scene_meditation"
version.workspace = true
edition.workspace = true


[dependencies]
bevy_magic_light_2d.workspace = true
bevy_pixel_camera.workspace = true
bevy_webp_anim.workspace = true
bevy.workspace = true
common_assets.workspace = true
common_loading_screen.workspace = true
common_physics.workspace = true
common_visuals.workspace = true
itertools.workspace = true
lazy_static.workspace = true
leafwing-input-manager.workspace = true
main_game_lib.workspace = true
rand.workspace = true


[features]
dev = ["bevy/glam_assert"]
dev-poisson = ["common_physics/poissons-eq-visualization"]
