[package]
name = "scene_meditation"
version.workspace = true
edition.workspace = true


[dependencies]
bevy_pixel_camera.workspace = true
bevy.workspace = true
common_action.workspace = true
common_assets.workspace = true
common_loading_screen.workspace = true
common_physics.workspace = true
common_visuals.workspace = true
itertools.workspace = true
lazy_static.workspace = true
leafwing-input-manager.workspace = true
main_game_lib.workspace = true
rand.workspace = true
untools.workspace = true


[features]
devtools = []
